# tensorflow_lite_opencl_bug

./: .gitignore  CMakeLists.txt  Model.hpp  README.md  conanfile.py  input.txt  main.cpp
keras_model/: convert_dummy_model.py
keras_model/dummy_model/: saved_model.pb
keras_model/dummy_model/variables/: variables.index
sample_outputs/: cpu.txt  gpu.txt
